[FA] faulty spec, DEL:/auth/{name}
